[package]
name = "seahash"
version = "4.0.0"
authors = ["ticki <ticki@users.noreply.github.com>", "Tom Almeida <tommoa256@gmail.com>"]
description = "A blazingly fast, portable hash function with proven statistical guarantees."
repository = "https://gitlab.redox-os.org/redox-os/seahash"
documentation = "https://docs.rs/seahash"
license = "MIT"
keywords = ["hash", "hashing", "checksum", "checsumming", "portable"]
exclude = ["target", "Cargo.lock"]

[dev-dependencies]
quickcheck = "0.9.2"
